# zetta-transport

./: .gitignore  Cargo.toml  DOCUMENTATION.md  LICENSE  LICENSE-APACHE  README.md  RFC.md  SPECIFICATION.md  actual_fix.py
examples/: basic.rs  c10k_handshake.rs  extreme_test.rs  fuzz_test.rs  gauntlet.rs  integrity_test.rs  iot_consistency.rs  jitter_test.rs  mobility_test.rs  simulation.rs  slow_consumer.rs  stress.rs
src/: connection.rs  crypto.rs  endpoint.rs  error.rs  fec.rs  lib.rs  packet.rs  simulation.rs  stream.rs  util.rs
src/crypto/: context.rs  header_protection.rs  key_derivation.rs  keypair.rs  mod.rs
src/fec/: mod.rs
src/protocol/: frame.rs  mod.rs  packet.rs  packet_number.rs  routing.rs
src/stream/: connection_handle.rs  mod.rs  stream.rs
src/transport/: actor.rs  congestion.rs  connection.rs  cookie.rs  endpoint.rs  handler.rs  handshake.rs  mod.rs  state.rs  stream_state.rs  window.rs  worker.rs
src/transport/actor/: event_loop.rs  handshake_handler.rs  incoming_handler.rs  mod.rs  packet_sender.rs
src/transport/state/: ack_tracker.rs  connection_state.rs  mod.rs  replay_window.rs  space.rs  stream_buffer.rs  stream_state.rs  unacked.rs  unacked_window.rs
tests/: chaos_monkey_tests.rs  echo_roundtrip.rs  integration_advanced.rs  integration_basic.rs  integration_features.rs  integration_simulation.rs  integration_stress.rs  integration_test.rs
