[package]
name = "zetta-transport"
version = "0.1.23"
edition = "2024"
authors = ["Burak Demir <demirburak8338@gmail.com>"]
description = "A high-performance, secure, and fault-tolerant UDP-based transport protocol written in Rust 2024."
license = "MIT OR Apache-2.0"
keywords = ["networking", "protocol", "udp", "iot", "security"]
categories = ["network-programming", "cryptography"]
repository = "https://github.com/demirburakk/zetta-transport"
readme = "README.md"
exclude = [
    "/.github/",
    "/.vscode/",
    "/tests/",
    "RFC.md"
]

[dependencies]
tokio = { version = "1.52", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
bytes = "1.11"
chacha20poly1305 = "0.10"
x25519-dalek = "2.0"
sha2 = "0.11"
hkdf = "0.13"
hmac = "0.13"
thiserror = "2.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
rand = "0.8"
dashmap = "6.1.0"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
chacha20 = "0.10.0"
libc = "0.2.186"
zeroize = "1.8.1"
aes = "0.9.0"
subtle = "2.6.1"
socket2 = "0.6.3"
num_cpus = "1.17.0"

[dev-dependencies]
tokio = { version = "1.52", features = ["full", "test-util"] }

[features]
testing = []
